# md2docx

./: .env.example  README.md  make_docx.bat  mcp_server.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
src/: enrichment.py  images.py  mcp_server.py
